--- a/Substation Builder/Pages/DatabaseView/RelayPage.xaml
+++ b/Substation Builder/Pages/DatabaseView/RelayPage.xaml
@@ -8,7 +8,7 @@
       mc:Ignorable="d">
 
     <!-- Breaker Template -->
-    <StackPanel>
+    <StackPanel Margin="10">
 
         <StackPanel.Triggers>
             <EventTrigger RoutedEvent="FrameworkElement.Loaded">
@@ -28,10 +28,10 @@
                 <Setter Property="Opacity" Value="0.85"/>
                 <Setter Property="Margin" Value="5,0,5,5"/>
                 <Setter Property="VerticalContentAlignment" Value="Center"/>
-                <Setter Property="HorizontalContentAlignment" Value="Left"/>
+                <Setter Property="HorizontalContentAlignment" Value="Right"/>
                 <Setter Property="VerticalAlignment" Value="Stretch"/>
                 <Setter Property="HorizontalAlignment" Value="Stretch"/>
-                <Setter Property="Width" Value="110"/>
+                <Setter Property="Width" Value="100"/>
             </Style>
 
             <Style TargetType="{x:Type TextBox}">
@@ -43,7 +43,7 @@
                 <Setter Property="HorizontalContentAlignment" Value="Left"/>
                 <Setter Property="VerticalAlignment" Value="Stretch"/>
                 <Setter Property="HorizontalAlignment" Value="Stretch"/>
-                <Setter Property="Width" Value="165"/>
+                <Setter Property="Width" Value="175"/>
                 <Setter Property="Background" Value="Black"/>
                 <Setter Property="Padding" Value="5,0,0,0"/>
             </Style>
@@ -56,47 +56,42 @@
                 <Setter Property="HorizontalContentAlignment" Value="Left"/>
                 <Setter Property="VerticalAlignment" Value="Stretch"/>
                 <Setter Property="HorizontalAlignment" Value="Stretch"/>
-                <Setter Property="Width" Value="165"/>
+                <Setter Property="Width" Value="175"/>
                 <Setter Property="Background" Value="Black"/>
             </Style>
 
         </StackPanel.Resources>
 
-        <StackPanel Margin="10">
+        <DockPanel>
+            <Label Content="Name:"/>
+            <TextBox Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}"/>
+        </DockPanel>
 
-            <DockPanel>
-                <Label Content="Name:"/>
-                <TextBox Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}"/>
-            </DockPanel>
+        <DockPanel>
+            <Label Content="Description:"/>
+            <TextBox Text="{Binding Description, UpdateSourceTrigger=PropertyChanged}"/>
+        </DockPanel>
 
-            <DockPanel>
-                <Label Content="Description:"/>
-                <TextBox Text="{Binding Description, UpdateSourceTrigger=PropertyChanged}"/>
-            </DockPanel>
+        <DockPanel>
+            <Label Content="Type:"/>
+            <ComboBox ItemsSource="{Binding Source={EnumHelper:EnumBindingSource {x:Type model:RelayType}}}" SelectedValue="{Binding Type}"/>
+        </DockPanel>
 
-            <DockPanel>
-                <Label Content="Type:"/>
-                <ComboBox ItemsSource="{Binding Source={EnumHelper:EnumBindingSource {x:Type model:RelayType}}}" SelectedValue="{Binding Type}"/>
-            </DockPanel>
+        <DockPanel>
+            <Label Content="Function:"/>
+            <ComboBox ItemsSource="{Binding Source={EnumHelper:EnumBindingSource {x:Type model:RelayFunction}}}" SelectedValue="{Binding Function}"/>
+        </DockPanel>
 
-            <DockPanel>
-                <Label Content="Function:"/>
-                <ComboBox ItemsSource="{Binding Source={EnumHelper:EnumBindingSource {x:Type model:RelayFunction}}}" SelectedValue="{Binding Function}"/>
-            </DockPanel>
+        <DockPanel>
+            <Label Content="Bus:"/>
+            <ComboBox ItemsSource="{Binding Source={EnumHelper:EnumBindingSource {x:Type model:Bus}}}" SelectedValue="{Binding Bus}"/>
+        </DockPanel>
 
-            <DockPanel>
-                <Label Content="Bus:"/>
-                <ComboBox ItemsSource="{Binding Source={EnumHelper:EnumBindingSource {x:Type model:Bus}}}" SelectedValue="{Binding Bus}"/>
-            </DockPanel>
-
-            <DockPanel>
-                <Label Content="Position:"/>
-                <ComboBox ItemsSource="{Binding Source={EnumHelper:EnumBindingSource {x:Type model:RelayPosition}}}" SelectedValue="{Binding Position}"/>
-            </DockPanel>
-
-        </StackPanel>
+        <DockPanel>
+            <Label Content="Position:"/>
+            <ComboBox ItemsSource="{Binding Source={EnumHelper:EnumBindingSource {x:Type model:RelayPosition}}}" SelectedValue="{Binding Position}"/>
+        </DockPanel>
 
     </StackPanel>
-
 
 </UserControl>
