--- a/Substation Builder/Pages/OnelineView/ParametersEditor.xaml
+++ b/Substation Builder/Pages/OnelineView/ParametersEditor.xaml
@@ -3,40 +3,89 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d" 
-             d:DesignHeight="350" d:DesignWidth="275">
+             mc:Ignorable="d">
     <UserControl.Resources>
         <ResourceDictionary Source="EditorStyles.xaml"/>
 
-
     </UserControl.Resources>
 
-    <StackPanel>
+    <!-- Option Template -->
+    <StackPanel Margin="10">
 
-        <DockPanel Margin="0,20,0,0">
-            <Label Content="Height:" Width="50" HorizontalContentAlignment="Right"/>
-            <TextBox Text="{Binding AreaHeight, UpdateSourceTrigger=PropertyChanged, StringFormat=\{0:F0\}}" VerticalContentAlignment="Center" Width="40" HorizontalContentAlignment="Center"/>
-            <Slider Value="{Binding AreaHeight}" Minimum="600" Maximum="2000" TickFrequency="100" SmallChange="50" LargeChange="100" IsSnapToTickEnabled="True" TickPlacement="BottomRight" Margin="5,0"/>
+        <StackPanel.Resources>
+            <Style TargetType="{x:Type Label}">
+                <Setter Property="FontSize" Value="16"/>
+                <Setter Property="Background" Value="#2d2d2d"/>
+                <Setter Property="Opacity" Value="0.85"/>
+                <Setter Property="Margin" Value="5,0,5,5"/>
+                <Setter Property="VerticalContentAlignment" Value="Center"/>
+                <Setter Property="HorizontalContentAlignment" Value="Right"/>
+                <Setter Property="VerticalAlignment" Value="Stretch"/>
+                <Setter Property="HorizontalAlignment" Value="Stretch"/>
+                <Setter Property="Width" Value="60"/>
+            </Style>
+
+            <Style TargetType="{x:Type TextBox}">
+                <Setter Property="FontSize" Value="16"/>
+                <Setter Property="Background" Value="#2d2d2d"/>
+                <Setter Property="Opacity" Value="0.85"/>
+                <Setter Property="Margin" Value="0,0,5,5"/>
+                <Setter Property="VerticalContentAlignment" Value="Center"/>
+                <Setter Property="HorizontalContentAlignment" Value="Center"/>
+                <Setter Property="Width" Value="50"/>
+                <Setter Property="Background" Value="Black"/>
+                <Setter Property="Padding" Value="5,0,0,0"/>
+            </Style>
+
+            <Style TargetType="{x:Type Slider}">
+                <Setter Property="Opacity" Value="0.85"/>
+                <Setter Property="Minimum" Value="600"/>
+                <Setter Property="Maximum" Value="2000"/>
+                <Setter Property="TickFrequency" Value="100"/>
+                <Setter Property="SmallChange" Value="50"/>
+                <Setter Property="LargeChange" Value="100"/>
+                <Setter Property="IsSnapToTickEnabled" Value="True"/>
+                <Setter Property="TickPlacement" Value="BottomRight"/>
+                <Setter Property="Margin" Value="5,0"/>
+            </Style>
+
+            <Style TargetType="{x:Type RadioButton}" BasedOn="{StaticResource {x:Type RadioButton}}">
+                <Setter Property="FontSize" Value="16"/>
+                <Setter Property="Opacity" Value="0.85"/>
+                <Setter Property="VerticalContentAlignment" Value="Center"/>
+                <Setter Property="HorizontalContentAlignment" Value="Left"/>
+                <Setter Property="VerticalAlignment" Value="Stretch"/>
+                <Setter Property="HorizontalAlignment" Value="Left"/>
+                <Setter Property="Width" Value="160"/>
+                <Setter Property="Padding" Value="5,0,0,0"/>
+            </Style>
+
+        </StackPanel.Resources>
+
+        <DockPanel>
+            <Label Content="Height:"/>
+            <TextBox Text="{Binding AreaHeight, UpdateSourceTrigger=PropertyChanged, StringFormat=\{0:F0\}}"/>
+            <Slider Value="{Binding AreaHeight}"/>
         </DockPanel>
 
-        <DockPanel Margin="0,20,0,0">
-            <Label Content="Width:" Width="50" HorizontalContentAlignment="Right"/>
-            <TextBox Text="{Binding AreaWidth, UpdateSourceTrigger=PropertyChanged, StringFormat=\{0:F0\}}" VerticalContentAlignment="Center" Width="40" HorizontalContentAlignment="Center"/>
-            <Slider Value="{Binding AreaWidth}" Minimum="600" Maximum="2000" TickFrequency="100" SmallChange="50" LargeChange="100" IsSnapToTickEnabled="True" TickPlacement="BottomRight" Margin="5,0"/>
+        <DockPanel>
+            <Label Content="Width:"/>
+            <TextBox Text="{Binding AreaWidth, UpdateSourceTrigger=PropertyChanged, StringFormat=\{0:F0\}}"/>
+            <Slider Value="{Binding AreaWidth}"/>
         </DockPanel>
 
-        <DockPanel Margin="0,20,0,0">
-            <Label Content="Zoom:" Width="50" HorizontalContentAlignment="Right"/>
-            <TextBox Text="{Binding ZoomLevelPercent, Mode=OneWay}" VerticalContentAlignment="Center" Width="40" HorizontalContentAlignment="Center" IsEnabled="False"/>
+        <DockPanel>
+            <Label Content="Zoom:"/>
+            <TextBox Text="{Binding ZoomLevelPercent, Mode=OneWay}"/>
             <DockPanel>
-                <Slider Value="{Binding ZoomLevel}" Minimum=".25" Maximum="3.5" TickFrequency="0.25" SmallChange=".25" IsSnapToTickEnabled="True" TickPlacement="BottomRight" Margin="5,0" Width="110" LargeChange="0.5"/>
-                <Button Content="Reset" Height="Auto" Width="Auto" HorizontalAlignment="Stretch" Background="{DynamicResource {x:Static SystemColors.ControlDarkDarkBrushKey}}" Margin="2,2,5,2" RenderTransformOrigin="0,0" Command="{Binding ResetZoom, Mode=OneWay}" BorderBrush="{DynamicResource {x:Static SystemColors.HighlightTextBrushKey}}" Padding="2"/>
+                <Slider Value="{Binding ZoomLevel}" Minimum=".25" Maximum="2" TickFrequency="0.25" SmallChange=".25" IsSnapToTickEnabled="True" TickPlacement="BottomRight" Margin="5,0" Width="100" LargeChange="0.5"/>
+                <Button Content="Reset" Height="Auto" Width="Auto" Background="{DynamicResource {x:Static SystemColors.ControlDarkDarkBrushKey}}" Command="{Binding ResetZoom, Mode=OneWay}" BorderBrush="{DynamicResource {x:Static SystemColors.HighlightTextBrushKey}}" HorizontalAlignment="Stretch" FontSize="12" Opacity="0.85" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Padding="2" Margin="5"/>
             </DockPanel>
         </DockPanel>
 
-        <StackPanel Grid.Row="4" Grid.ColumnSpan="2" Margin="0,20,0,0">
-            <CheckBox IsChecked="{Binding ShowNames}" Content="Show Names" HorizontalAlignment="Left" Margin="5"/>
-            <TextBlock Margin="5" Text="Show Coordinates:"/>
+        <StackPanel Grid.Row="4" Grid.ColumnSpan="2">
+            <CheckBox IsChecked="{Binding ShowNames}" Content="Show Names" HorizontalAlignment="Left" Margin="5" FontSize="16" Padding="6,5,0,0"/>
+            <TextBlock Margin="5" Text="Show Coordinates:" FontSize="16"/>
             <RadioButton Margin="5" IsChecked="{Binding ShowAllCoordinates}" Content="All Nodes"/>
             <RadioButton Margin="5" IsChecked="{Binding ShowCurrentCoordinates}" Content="Selected Node"/>
             <RadioButton Margin="5" Content="None"/>
